k8s/infra/vault/extra/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - vault.as212024.net
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: vault
          port: 8200
