k8s/infra/vault/extra/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-as212024
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx-public
  rules:
    - host: vault.as212024.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
  tls:
    - hosts:
        - vault.as212024.net
      secretName: vault-as212024-tls
